--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div class="container">
+  <div class="row">
+    <div class="col-6">Lorem ipsum dolor sit amet.</div>
+    <div class="col-6">lorem5</div>
+  </div>
+</div>
 <h1>一個幫助人從他律到自律，最終養成習慣的平台</h1>
