--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import 'bootstrap/scss/bootstrap';
