--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid tw-bg-amber-300">
-  <div class="row vh-100 text-center align-items-center">
-    <div class="col">
-      <h1>一個幫助人從他律到自律，最終養成習慣的平台</h1>
-    </div>
-  </div>
-</div>
+<!-- <div class="container-fluid tw-bg-amber-300"> -->
+<!--   <div class="row vh-100 text-center align-items-center"> -->
+<!--     <div class="col"> -->
+<!--       <h1>一個幫助人從他律到自律，最終養成習慣的平台</h1> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+<ejs-schedule [selectedDate]='selectedDate' [eventSettings]='eventSettings'></ejs-schedule>
