--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
 <!--     </div> -->
 <!--   </div> -->
 <!-- </div> -->
-<ejs-schedule [selectedDate]='selectedDate' [eventSettings]='eventSettings' [(currentView)]="selectedView"></ejs-schedule>
+<app-schedule></app-schedule>
