--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!-- <div class="container-fluid tw-bg-amber-300"> -->
-<!--   <div class="row vh-100 text-center align-items-center"> -->
-<!--     <div class="col"> -->
-<!--       <h1>一個幫助人從他律到自律，最終養成習慣的平台</h1> -->
-<!--     </div> -->
-<!--   </div> -->
-<!-- </div> -->
-<app-schedule></app-schedule>
+<div class="container-fluid g-0">
+  <router-outlet></router-outlet>
+  <p-toast position="top-right" [breakpoints]="{'576px': {width: '100%', right: '0', left: '0'}}"></p-toast>
+</div>
