--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -8,15 +8,20 @@
 </div>
 
 <div class="tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-select-none hover:tw-bg-amber-50 tw-duration-1000">
-  <div class="image-container">
-    <img *ngIf="imgIndex === 0" [src]="imgSrcs[0]" class="tw-select-none image" [@fadeInOut] (mouseover)="imgIndex=1" alt="">
-    <img *ngIf="imgIndex === 1" [src]="imgSrcs[1]" class="tw-select-none image" [@fadeInOut] (mouseleave)="imgIndex=0" alt="">
-  </div>
+  <a href="https://docs.yuyugoal.com/" target="_blank" [pTooltip]="'View WhitePaper'" [tooltipPosition]="'right'">
+    <div class="image-container">
+      <img *ngIf="imgIndex === 0" [src]="imgSrcs[0]" class="tw-select-none image" [@fadeInOut] (mouseover)="imgIndex=1" alt="">
+      <img *ngIf="imgIndex === 1" [src]="imgSrcs[1]" class="tw-select-none image" [@fadeInOut] (mouseleave)="imgIndex=0" alt="">
+    </div>
+  </a>
+
   <h1 class="tw-text-3xl hover:tw-bg-amber-700 hover:tw-text-4xl hover:tw-text-white hover:tw-border-amber-900 hover:tw-p-6
-  tw-border-amber-100 tw-border-solid tw-border-4 tw-rounded-full tw-duration-1000 tw-p-5 my-5 tw-cursor-pointer"
-    routerLink="schedule"
-  >
+  tw-border-amber-100 tw-border-solid tw-border-4 tw-rounded-full tw-duration-1000 tw-p-5 my-5 tw-cursor-pointer" routerLink="schedule">
     <span class="fade-in-out">Start Your Goal Today!</span>
   </h1>
-  <div class="tw-text-xl tw-mt-10">Built on Chromia</div>
+  <div class="tw-text-xl tw-mt-10">
+    <a href="https://chromia.com/" class="text-decoration-none" style="color: inherit;">
+      <span class="h4">Built on Chromia</span>
+    </a>
+  </div>
 </div>
